--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,8 @@
 body{
     margin: 0;
-    /* padding: 50px; */
-    /* color: gray; */
 }
 .intro{
+    padding: 40px;
     display: flex;
     flex-direction: row;
     gap: 60px;
@@ -22,7 +21,7 @@ body{
 .beauty{
     width: 800px;
     position: relative;
-    /* bottom: 200px; */
+    bottom: 100px;
 }
 .payground-app{
     display: flex;
@@ -132,7 +131,25 @@ body{
 .fourdoctors{
     padding: 50px;
     display: flex;
+    justify-content: space-around;
 }
 .fourdoctors img{
     width: 750px;
+}
+.discription3{
+    max-width: 400px;
+}
+.question{
+    color: #303178;
+    font-size: 2rem;
+}
+.discription3 button{
+    border-radius: 15px;
+    background-color: #3c3d6d;
+    color: white;
+    padding: 0px 20px 0px 20px;
+}
+.discription3 button:hover{
+    cursor: pointer;
+    background-color: rgb(22, 35, 42);
 }
