--- a/css/flag.css
+++ b/css/flag.css
@@ -1,6 +1,11 @@
+.flags{
+    max-width: 400px;
+    padding: 30px;
+}
+
 .Ethiopia{
     /* background-color: green; */
-    padding: 30px;
+    /* padding: 30px; */
     width: 400px;
 }
 .green{
@@ -15,26 +20,85 @@
     background-color: red;
     padding: 30px;
 }
-
-/* .star {
+.triangle1{
+    width: 0;
+    height: 0;
+    border-left: 30px solid transparent;
+    border-right: 30px solid transparent;
+    border-top: 30px solid blue;
     position: relative;
-    bottom: 170px;
-    left: 100px;
+    bottom: 100px;
+    left: 170px;
+}
+.triangle2{
     width: 0;
     height: 0;
-    border-left: 55px solid transparent;
-    border-right: 55px solid transparent;
-    border-bottom: 90px solid blue;
-  }
-  
-  .star:after {
-    position: absolute;
+    border-left: 30px solid transparent;
+    border-right: 30px solid transparent;
+    border-bottom: 30px solid blue;
+    position: relative;
+    bottom: 140px;
+    left: 170px;
+}
+
+.south-red{
+    padding: 30px;
+    background-color: red;
+    /* width: 0;
+    height: 0;
+    border-left: 35px solid transparent;
+    border-right: 35px solid transparent; */
+    /* border-bottom: 35px solid black; */
+    /* border-top: 35px solid black; */
+}
+.south-blue{
+    padding: 30px;
+    background-color: rgb(6, 6, 174);
+    position: relative;
+    bottom: -30px;
+
+}
+.south-green{
+    width: 220px;
+    padding: 15px;
+    background-color: green;
+    position: relative;
+    bottom: -16px;
+    left: 150px;
+}
+.south-white2{
     width: 0;
     height: 0;
-    top: 50px;
-    left: -75px;
-    content: "";
-    border-left: 75px solid transparent;
-    border-right: 75px solid transparent;
-    border-top: 90px solid blue;
-  } */
+    border-top: 90px solid transparent;
+    border-bottom: 90px solid transparent;
+    border-left: 180px solid white;
+    position: relative;
+    bottom: 150px;
+}
+.south-green2{
+    width: 0;
+    height: 0;
+    border-top: 80px solid transparent;
+    border-bottom: 80px solid transparent;
+    border-left: 185px solid green;
+    position: relative;
+    bottom: 320px;
+}
+.south-yellow{
+    width: 0;
+    height: 0;
+    border-top: 60px solid transparent;
+    border-bottom: 60px solid transparent;
+    border-left: 120px solid yellow;
+    position: relative;
+    bottom: 460px;
+}
+.south-black{
+    width: 0;
+    height: 0;
+    border-top: 45px solid transparent;
+    border-bottom: 45px solid transparent;
+    border-left: 100px solid black;
+    position: relative;
+    bottom: 565px;
+}
