--- a/css/flag.css
+++ b/css/flag.css
@@ -102,7 +102,10 @@
     position: relative;
     bottom: 565px;
 }
-
+/* .costa-rica{
+    border-style: solid;
+    background-color: rebeccapurple;
+} */
 .costa-blue1{
     padding: 15px;
     background-color: blue;
@@ -120,4 +123,24 @@
     background-color: blue;
     position: relative;
     bottom: 390px;
+}
+.france-blue{
+    padding: 30px;
+    background-color: blue;
+
+}
+.france{
+    max-width: 170px;
+    border-style: solid;
+    border-width: 1px;
+    display: flex;
+    position: relative;
+    bottom: 320px;
+    min-height: 200px;
+}
+.france-red{
+    padding: 30px;
+    background-color: red;
+    position: relative;
+    left: 50px;
 }
